fix 0018822: 'Is this subscriber blacklisted' data has no spacing

--- a/less/legacy.less
+++ b/less/legacy.less
@@ -279,6 +279,9 @@ body.importadmin table.table tr td:first-child{
 	}           
 }
 
+/* ## user */
+body.user table.userAdd .btn-xs{margin-left:10px}
+
 /* ## send */
 body.send #sendtabs .btn {margin:0px;padding:5px}
 body.send form, body.send #testpanel{margin-bottom:0}
